--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -54,7 +54,7 @@
             <div class="col-lg-12">
               <form role="form" name="loginForm" novalidate valdr-type="User">
                 <div class="form-group" valdr-form-group>
-                  <!--<input type="hidden" id="credentials" name="credentials" ng-model="credentials" />-->
+                  <input type="hidden" id="credentials" name="credentials" ng-model="credentials" />
 
                 </div>
                 <div class="form-group" valdr-form-group>
