--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -5,7 +5,7 @@
   <div class="container">
     <!-- START  logo -->
     <div class="col-lg-1 col-md-1 col-sm-2 col-xs-12 nopadding logo-center">
-      <a href="index.html">  <img src="/assets/images/logo.png" alt="" ></a>
+      <a href="/#/">  <img src="/assets/images/logo.png" alt="" ></a>
     </div>
     <!-- END  logo -->
     <!-- START  Search box -->
