--- a/src/app/request-callback/request-callback.html
+++ b/src/app/request-callback/request-callback.html
@@ -20,11 +20,11 @@
           <div class="col-md-8 padding-right-0">
             <div class="input-group">
               <span class="input-group-addon"><span class="glyphicon glyphicon-earphone"></span></span>
-              <input type="phone" name="p1" id="p1" class="form-control col-xs-12 col-sm-6 col-md-8" onkeypress="return isNumber(event)" placeholder="10 Digits Phone No" data-mask="999-999-9999">
+              <input type="phone" name="p1" id="p1" class="form-control col-xs-12 col-sm-6 col-md-8" placeholder="10 Digits Phone No" data-mask="999-999-9999">
             </div>
           </div>
           <div class="col-md-4 padding-left-2">
-            <input type="phone" name="p2" size="5" id="p2" class="form-control col-xs-6 col-md-4" onkeypress="return isNumber(event)" placeholder="Extension (optional)" data-mask="99999">
+            <input type="phone" name="p2" size="5" id="p2" class="form-control col-xs-6 col-md-4" placeholder="Extension (optional)" data-mask="99999">
           </div>
         </div>
       </div>
