--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -40,8 +40,8 @@
       <!-- START  LOGIN/REGISTER TAB -->
       <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12 login_page">
         <ul class="nav nav-tabs nav-mytab">
-          <li ng-class="{'active' : !signUpTab}"><a data-toggle="tab" ng-click="signUpTab= false;">Log in</a></li>
-          <li ng-class="{'active' : signUpTab}"><a data-toggle="tab" ng-click="signUpTab= true;">Register</a></li>
+          <li ng-class="{'active' : !signUpTab}"><a href="/#/login">Log in</a></li>
+          <li ng-class="{'active' : signUpTab}"><a href="/#/register" >Register</a></li>
         </ul>
 
         <div class="tab-content my-tab">
@@ -63,7 +63,7 @@
                 </div>
                 <div class="form-group" valdr-form-group>
                   <input type="password" autocomplete="off" name="password" ng-model="loginData.password" ng-required="true"
-                         class="form-control" placeholder="password">
+                         class="form-control" placeholder="password" >
                 </div>
                 <div class="checkbox">
                   <label><input type="checkbox"> Remember me</label>
@@ -81,27 +81,31 @@
               class="flot-right need_help"><a href="#">Need Help?</a></span></div>
 
             <div class="col-lg-12">
-              <form role="form" novalidate valdr-type="User" class="register-user">
+              <form  role="form" name="userRegisterForm"  novalidate valdr-type="UserRegister" class="register-user">
                 <div class="form-group flex-field">
                   <fieldset valdr-form-group>
-                    <input type="email" class="form-control in-block fname_in" ng-model="firstName" name="firstName"
-                           placeholder="First Name">
+                    <input type="text" class="form-control in-block fname_in" ng-model="UserRegisterData.firstName" name="firstName"
+                           placeholder="First Name" autocomplete="off">
                   </fieldset>
                   <fieldset valdr-form-group>
-                    <input type="email" class="form-control in-block fname_in" ng-model="lastName" name="lastName"
-                           placeholder="Last Name">
+                    <input type="text" class="form-control in-block fname_in" ng-model="UserRegisterData.lastName" name="lastName"
+                           placeholder="Last Name" autocomplete="off">
                   </fieldset>
                 </div>
                 <div class="form-group" valdr-form-group>
 
-                  <input type="email" class="form-control" ng-model="email" name="email" placeholder="Email">
+                  <input type="email" autocomplete="off" class="form-control" ng-model="UserRegisterData.email" name="email" placeholder="Email">
                 </div>
+                <div class="form-group" valdr-form;[-group>
+
+                  <input type="password" class="form-control" ng-model="UserRegisterData.password" name="password"
+                         placeholder="password" autocomplete="off">
+                </div>
+
                 <div class="form-group" valdr-form-group>
 
-                  <input type="password" class="form-control" ng-model="password" name="password"
-                         placeholder="password">
+                  <input type="text" class="form-control" ng-model="UserRegisterData.phone" name="phone" placeholder="Phone" autocomplete="off">
                 </div>
-
                 <div class="need_help">By <a href="#">Signing up</a>, you agree to findoo’s <a href="#">Terms &
                   Conditions</a></div>
                 <hr>
