--- a/src/app/search/search.html
+++ b/src/app/search/search.html
@@ -10,9 +10,9 @@
             <span class="filter">Filter Results:</span>
           </div>
           <div class="col-lg-12 category_filter1">
-            <h5 class="cat_side_title">Category <i ng-show="!categories" class='fa fa-circle-o-notch fa-spin  fa-fw'></i><span class="cat_minus"><a href="#" data-toggle="collapse" data-target="#catename"><i class="fa fa-minus-square fa-lg"></i></a></span>
+            <h5 class="cat_side_title">Category <i ng-show="!categories" class='fa fa-circle-o-notch fa-spin  fa-fw'></i><span class="cat_minus"><a ng-click="flags.categoryCollapse = !flags.categoryCollapse" data-toggle="collapse" data-target="#catename"><i class="fa fa-lg" ng-class="{'fa-minus-square' : !flags.categoryCollapse,'fa-plus-square ' : flags.categoryCollapse }"></i></a></span>
             </h5>
-            <form id="catename" class="collapse in" ng-if="categories">
+            <form id="catename" class="collapse" ng-class="{'in': !flags.categoryCollapse, 'out' : flags.categoryCollapse}" ng-if="categories">
               <div class="checkbox filter_cat_tex">
                 <label><input type="checkbox" value=""><span class="cat_mar">Show All</span></label>
               </div>
