--- a/src/app/search/search.html
+++ b/src/app/search/search.html
@@ -15,7 +15,7 @@
             <form id="catename" class="collapse" ng-class="{'in': !flags.categoryCollapse, 'out' : flags.categoryCollapse}" ng-if="categories">
               <div class="checkbox filter_cat_tex">
                 <label><input type="checkbox" value=""><span class="cat_mar">Show All</span></label>
-              </div>
+              </div>O
               <div class="checkbox filter_cat_tex" ng-repeat="category in categories">
                 <label><input type="checkbox" value=""><span class="cat_mar">{{category.Name}}</span></label>
               </div>
