--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -13,8 +13,9 @@
 
       <form class="navbar-form my-search-nav" role="search">
 
-        <input type="text" class="form-control search-head-without" name="q" placeholder="Search lifts, boom lifts, forklifts etc" id="top-query" name="query" ng-model="selectedUser"
-               typeahead="user as user.name for user in getUsers($viewValue)"
+        <input type="text" class="form-control search-head-without" name="q" autocomplete="off" placeholder="Search lifts, boom lifts, forklifts etc" id="top-query" name="query" ng-model="selectedUser"
+               typeahead="item as item.Product_Name for item in getProducts($viewValue)"
+               typeahead-on-select="selectSearchedItem($item, $model, $label)"
                typeahead-template-url="typeahead-item.html">
 
         <button class="btn btn-default my_search" type="submit" style=" "><i class="glyphicon glyphicon-arrow-right"></i></button>
