search page changes

--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -14,7 +14,7 @@
             <li><a data-toggle="pill" href="#mycat">
               <i class="fa fa-heart my-verti-icon"></i>
               My Catalog</a></li>
-            <li><a data-toggle="pill" href="/#/manage/job-sites">
+            <li><a data-toggle="pill" href="/#/manage/jobsites">
               <i class="fa fa-map-marker my-verti-icon"></i>
               Manage Job Sites</a></li>
             <li><a data-toggle="pill" href="#myalc">
@@ -27,7 +27,7 @@
             <li><a data-toggle="pill" href="#makepay">
               <i class="fa fa-usd my-verti-icon"></i>
               Make a Payment</a></li>
-            <li><a data-toggle="pill" href="#viewin">
+            <li><a data-toggle="pill" href="/#/invoices">
               <i class="fa fa-file my-verti-icon"></i>
 
               View Invoices</a></li>
