--- a/src/app/invoices/invoices.html
+++ b/src/app/invoices/invoices.html
@@ -1,88 +1,96 @@
-<div class="row">
-  <div class="col-md-3">
-    <div >
-      <div class="box box-solid">
-        <div class="box-body no-padding">
-          <ul class="nav nav-pills nav-stacked">
-            <li class="active"><a href="/#/dashboard"><i class="fa fa-inbox"></i> Dashboard </a></li>
-            <li><a href="#"><i class="fa fa-envelope-o"></i> My Catalog</a></li>
-            <li><a href="/#/manage/job-sites"><i class="fa fa-file-text-o"></i> Manage Job Site</a></li>
-            <li><a href="#"><i class="fa fa-filter"></i> My Account</a></li>
-            <li><a href="#"><i class="fa fa-trash-o"></i>Quote & Reservation</a></li>
-            <li><a href="#"><i class="fa fa-trash-o"></i>Make Payments</a></li>
-            <li><a href="/#/invoices"><i class="fa fa-trash-o"></i>Invoices</a></li>
-          </ul>
-        </div><!-- /.box-body -->
-      </div><!-- /. box -->
-      <div class="box box-solid">
-        <div class="box-header with-border">
-          <h3 class="box-title">Request</h3>
-          <div class="box-tools">
-            <button class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
-          </div>
-        </div>
-        <div class="box-body no-padding">
-          <ul class="nav nav-pills nav-stacked">
-            <li><a href="#"><i class="fa fa-circle-o text-red"></i> Pick up Request</a></li>
-            <li><a href="#"><i class="fa fa-circle-o text-yellow"></i> Service Request</a></li>
-            <li><a href="#"><i class="fa fa-circle-o text-light-blue"></i> Credit Request</a></li>
-            <li><a href="#"><i class="fa fa-circle-o text-light-blue"></i> Quick Request</a></li>
-          </ul>
-        </div><!-- /.box-body -->
-      </div><!-- /.box -->
+<section>
+  <!-- START  Main Content -->
+  <article class="main-cantain">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 filter_side">
+          <ul class="nav nav-pills nav-stacked my-verti-tab">
+            <li class="active">
+              <a data-toggle="pill" href="/#/dashboard">
+                <i class="fa fa-th-large my-verti-icon"></i>
 
-    </div>
-  </div>
-  <div class="col-md-9">
-    <div class="content-wrapper1">
-      <section class="content-header">
-        <h1>
-          Invoices
-        </h1>
-        <ol class="breadcrumb">
-          <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-          <li class="active">Invoices</li>
-        </ol>
-        <div class="clearfix">
-          <div class="box-tools pull-left">
-            <div class="has-feedback">
-              <input type="text" class="form-control input-sm" placeholder="Search Invoices">
-              <span class="glyphicon glyphicon-search form-control-feedback"></span>
+                Dashboard</a></li>
+            <li><a data-toggle="pill" href="#mycat">
+              <i class="fa fa-heart my-verti-icon"></i>
+              My Catalog</a></li>
+            <li><a data-toggle="pill" href="/#/manage/jobsites">
+              <i class="fa fa-map-marker my-verti-icon"></i>
+              Manage Job Sites</a></li>
+            <li><a data-toggle="pill" href="#myalc">
+              <i class="fa fa-user my-verti-icon"></i>
+              Manage My Account</a></li>
+            <li><a data-toggle="pill" href="#quotes">
+              <i class="fa fa-bookmark-o my-verti-icon"></i>
+              Quotes &amp;
+              Reservations</a></li>
+            <li><a data-toggle="pill" href="#makepay">
+              <i class="fa fa-usd my-verti-icon"></i>
+              Make a Payment</a></li>
+            <li><a data-toggle="pill" href="/#/invoices">
+              <i class="fa fa-file my-verti-icon"></i>
+
+              View Invoices</a></li>
+            <li><a data-toggle="pill" href="#req"><i class="fa fa-comments"></i>
+              Requests</a></li>
+            <li><a data-toggle="pill" href="#viewcon"><i class="fa fa-briefcase"></i>
+              View Contracts</a></li>
+
+          </ul>
+
+        </div>
+          <div class="col-md-9">
+            <div class="content-wrapper1">
+              <section class="content-header">
+                <h1>
+                  Invoices
+                </h1>
+                <ol class="breadcrumb">
+                  <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
+                  <li class="active">Invoices</li>
+                </ol>
+                <div class="clearfix">
+                  <div class="box-tools pull-left">
+                    <div class="has-feedback">
+                      <input type="text" class="form-control input-sm" placeholder="Search Invoices">
+                      <span class="glyphicon glyphicon-search form-control-feedback"></span>
+                    </div>
+                  </div>
+
+                  <div class=" pull-right">
+                    All Invoices/ Outstanding
+                  </div>
+                </div>
+              </section>
+              <br>
+              <table class="table table-striped">
+                <thead>
+                <tr>
+                  <th>Invoices</th>
+                  <th>Job Sites</th>
+                  <th>Contract #</th>
+                  <th>Purchase Order</th>
+                  <th>Total</th>
+                  <th>Due Amount</th>
+                  <th></th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr ng-repeat="invoice in invoices">
+                  <td>{{invoice.no}}</td>
+                  <td>{{invoice.jobsite}}</td>
+                  <td>{{invoice.contract}}</td>
+                  <td>{{invoice.purchaseOrder}}</td>
+                  <td>{{invoice.total}}</td>
+                  <td>{{invoice.dueAmount}}</td>
+                  <td>
+                    <a href="#"><i class="fa fa-eye"></i></a>
+                    <a href="#"><i class="fa fa-download"></i></a></td>
+                </tr>
+                </tbody>
+              </table>
             </div>
           </div>
-
-          <div class=" pull-right">
-            All Invoices/ Outstanding
-          </div>
-        </div>
-      </section>
-      <br>
-      <table class="table table-striped">
-        <thead>
-        <tr>
-          <th>Invoices</th>
-          <th>Job Sites</th>
-          <th>Contract #</th>
-          <th>Purchase Order</th>
-          <th>Total</th>
-          <th>Due Amount</th>
-          <th></th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr ng-repeat="invoice in invoices">
-          <td>{{invoice.no}}</td>
-          <td>{{invoice.jobsite}}</td>
-          <td>{{invoice.contract}}</td>
-          <td>{{invoice.purchaseOrder}}</td>
-          <td>{{invoice.total}}</td>
-          <td>{{invoice.dueAmount}}</td>
-          <td>
-            <a href="#"><i class="fa fa-eye"></i></a>
-            <a href="#"><i class="fa fa-download"></i></a></td>
-        </tr>
-        </tbody>
-      </table>
+      </div>
     </div>
-  </div>
-</div>
+  </article>
+</section>
