--- a/src/app/prelogin-header/prelogin-header.html
+++ b/src/app/prelogin-header/prelogin-header.html
@@ -13,6 +13,7 @@
         <input type="text" class="form-control search-head"  name="q" placeholder="Search lifts, boom lifts, forklifts etc" id="top-query" name="query" ng-model="selectedProduct"
                typeahead="item as item.Product_Name for item in getProducts($viewValue)"
                typeahead-on-select="selectSearchedItem($item, $model, $label)"
+               autocomplete="off"
                typeahead-template-url="typeahead-item.html">
 
         <button class="btn btn-default my_search" type="submit" ng-click="selectSearchedItem()"><i class="glyphicon glyphicon-arrow-right"></i></button>
